
/*------------------------------------------------------------------------------
 * AUTO GENERATED
 *----------------------------------------------------------------------------*/

syntax = "proto3";
package caikit.runtime.Nlp;
import "caikit_data_model.caikit_nlp.exponentialdecaylengthpenalty.proto";


/*-- MESSAGES ----------------------------------------------------------------*/

message TextGenerationTaskRequest {

  /*-- fields --*/
  string text = 1;
  optional int64 max_new_tokens = 2;
  optional int64 min_new_tokens = 3;
  optional int64 truncate_input_tokens = 4;
  optional string decoding_method = 5;
  optional int64 top_k = 6;
  optional double top_p = 7;
  optional double typical_p = 8;
  optional double temperature = 9;
  optional double repetition_penalty = 10;
  optional double max_time = 11;
  optional caikit_data_model.caikit_nlp.ExponentialDecayLengthPenalty exponential_decay_length_penalty = 12;
  repeated string stop_sequences = 13;
  optional uint64 seed = 14;
  optional bool preserve_input_text = 15;
}
